.ci/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ing
spec:
  ingressClassName: nginx
  rules:
  - host: 'webinar.vasyan.kis.im'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
